# AMC-trader

./: ,  .dockerignore  .env  .env.example  .env.local  .env.local.sample  .env.production.local  .env.template  .gitignore  ADVANCED_RANKING_INTEGRATION.md  AGENTS.md  AGENT_COORDINATION.md  AUTONOMOUS_OPERATIONS.md  CLAUDE.md  CLAUDE_CODE_INBOX.md  CLAUDE_CODE_OUTBOX.md  CLEANUP_COMPLETE.md  CODEX_RESPONSE.md  CONTEXT_PRESERVATION_PROTOCOL.md  DEPLOY.md  DEPLOYMENT-STATUS.md  DEPLOYMENT_GUIDE.md  DISCOVERY-FIX-SUMMARY.md  DUPLICATION-FIX-REPORT.md  Dockerfile  Dockerfile.save  ENHANCED_UI_DEPLOYMENT_GUIDE.md  ENHANCEMENT_SUMMARY.md  FINAL-STATUS.md  FIXED_2026-02-08.md  FIXES_COMPLETED.md  FRONTEND_FIXES_2026-02-19.md  GHOST_PORTFOLIO_API.md  GOOGLE_SHEETS_SETUP.md  HYBRID_V1_PR.md  HYBRID_V1_VALIDATION.md  IDEAL_INTERFACE_DESIGN.md  INSTALL_AND_RUN.md  LEARNINGS.md  LEARNING_DATA_FLOW.md  (+192 more)
backend/: .dockerignore  DISCOVERY_FLOW_DIAGRAM.md  Dockerfile  ENHANCED_THESIS_SYSTEM.md  EXPLOSIVE_DISCOVERY_OPTIMIZATION.md  README.md  SQUEEZE_PIPELINE_DIAGNOSIS.md  SYSTEM_DETAILED_BREAKDOWN.md  __init__.py  alembic.ini  analyze_winning_patterns.py  detailed_mathematics.py  diagnosis_squeeze_pipeline.py  enhanced_positions_example.json  mathematical_analysis.py  pyproject.toml  requirements.txt  run_discovery.sh  run_migration.py  start_worker.py  system_trace.py  test_aggressive_optimization.py  test_aggressive_results.py  test_alphastack_endpoints.py  test_alphastack_integration.py  test_complete_interface.py  test_discovery_debug.py  test_explosive_fixes.py  test_filtration_stages.py  test_final_validation.py  test_live_discovery_flow.py  test_optimized_api.py  test_scoring_issue.py  (+12 more)
(+586 files in other folders)
