[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amc-api"
version = "1.0.0"
description = "AMC Trading API Backend"
authors = [{name = "AMC Trader", email = "trader@example.com"}]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "redis==5.0.1",
    "httpx==0.25.2",
    "alpaca-trade-api==3.1.1",
    "psycopg2-binary==2.9.9",
    "python-multipart==0.0.6",
    "prometheus-client==0.19.0",
    "structlog==23.2.0",
]

[tool.setuptools]
packages = ["app"]